Fixed button spacing in repeat event deletion overlay

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -374,7 +374,8 @@
 	/* Add spacing to the options */
 	span.default:not(.close)
 	{
-		margin: 5px;
+		display: block;
+		margin: 5px auto;
 		width: 200px;
 	}
 	#single-evnt { margin-top: 20px; }
